# northwind-streamlit

./: Dockerfile  README.md  app.py  ask_sql_question.py  base_northwind.xlsx  docker-compose.yml  load_data_to_sql.py  pyproject.toml
